...
    <item
        android:id="@+id/ic_home"
        android:orderInCategory="100"
        android:title="@string/inicio"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/ic_equipos"
        android:orderInCategory="100"
        android:title="@string/equipos"
        android:icon="@drawable/ic_event_24"/>
    <item
        android:id="@+id/ic_buscar"
        android:orderInCategory="100"
...
